--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.11"
   }
